--- a/app/assets/stylesheets/page.sass
+++ b/app/assets/stylesheets/page.sass
@@ -1,20 +1,20 @@
 @import "base"
 
 body
-  background-color: #555
-  font-family: Open Sans
+  background-color: $lightest-gray-60
+  font-family: Roboto
   font-size: 1.3rem
   margin: 0
   color: #000
 
 #page
   width: 980px
-  background-color: white
+  background-color: $lightest-gray-60
   margin: 0 auto
   padding: 10px 10px 0 10px
 
 header
-  background-color: #242021
+  background-color: white
   margin: -10px -10px 0px -10px
 
 #nav-top-bar
@@ -27,18 +27,21 @@ header
       display: inline-block
       margin-right: 16px
       a
-        color: #ddd
-        font-size: 13pt
+        color: white
+        font-size: 10pt
         text-decoration: none
-        &:hover
-          padding-bottom: 0px
-          border-bottom: 0.4rem white solid
-          color: white
+        //&:hover
+        //  padding-bottom: 0px
+        //  border-bottom: 0.4rem white solid
+        //  color: white
 #navbar-inner
-  height: 28px
+  background-color: $secondary-light-purple
+  padding-top: 1px
+  padding-left: 2px
+  height: 42px
 
 #project_container
-  background-color: white
+  background-color: $lightest-gray-80
   #page-contents
     width: auto
     #project_masthead
@@ -58,12 +61,24 @@ header
     padding-left: 2rem
 .navbar
   border-width: 0
-  margin: 0
-  padding: 0
-  min-height: 33px
+  margin: 15px
+  padding: 0 0 5px 0
+  min-height: 30px
   .logo_link
+    color: $secondary-light-purple !important
+    position: absolute
     float: left
+    text-decoration: none
     margin-top: 3px
+    .navbar_seperator
+      font-size: 30px
+    .navbar_small_text
+      font-size: 10px
+    .navbar_large_text
+      font-size: 24px
+  .logo_img
+    width: 15%
+    height: 15%
   .btn
     border: 0
     display: inline-block
@@ -72,7 +87,7 @@ header
     margin: 0
     padding: 1px 6px 0 7px
   .follow_btn
-    background-color: #DDD !important
+    background-color: $light-gray !important
     display: inline-block
     padding: 0 0 0 4px
     &:hover
@@ -80,7 +95,7 @@ header
       text-decoration: none
     height: 24px
     i, p, img
-      color: #888
+      color: white
       display: inline-block
       vertical-align: top
     i
@@ -101,13 +116,11 @@ header
     li
       float: left
       padding: 0 0 0 8px
-      a
-        text-transform: uppercase
 
 #top_nav_actions
   float: right
   margin-right: 5px
-  margin-top: .6rem
+  padding-top: 15px
 #logged_user_menu
   a
     color: #e6e6e6
@@ -203,10 +216,10 @@ header
 
 table
   td,th
-    :vertical-align middle !important
+    vertical-align: middle !important
 
 .valign_centre
-  :vertical-align middle !important
+  vertical-align: middle !important
 
 .btn-group
   a
